--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -5,7 +5,7 @@ version: "3"
 tasks:
   clear:
     vars:
-      PROJECT_NAME: "go-template-fiber"
+      PROJECT_NAME: "go-template-echo"
     cmds:
       - rm -f ./{{.PROJECT_NAME}} coverage.out
       - rm -rf base/*
@@ -21,9 +21,11 @@ tasks:
         sh: git log -n 1 --format=%h
       GIT_BRANCH:
         sh: git name-rev --name-only {{.GIT_COMMIT}}
-      VERSION: '{{.BUILDNUM| default "1"}}'
+      BUILDNUM: '{{.BUILDNUM| default "1"}}'
+      BUILD_TIMESTAMP:
+        sh: date -u +'%Y-%m-%dT%H:%M:%SZ'
     cmds:
-      - go build -ldflags="-X main.aGitHash={{.GIT_COMMIT}} -X main.aGitBranch={{.GIT_BRANCH}} -X main.aBuildNumber={{.BUILDNUM}}" .
+      - go build -ldflags="-X main.aGitHash={{.GIT_COMMIT}} -X main.aGitBranch={{.GIT_BRANCH}} -X main.aBuildNumber={{.BUILDNUM}} -X main.aBuildTimeStamp={{.BUILD_TIMESTAMP}}" .
 
   gen-apidoc:
     cmds:
